--- a/popup.html
+++ b/popup.html
@@ -23,8 +23,9 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="popup.js"></script>
-  </head>
+    <script src="popupignore.js"></script>
+</head>
+    <p>My Chrome Extension</p>
   <body>
   </body>
 </html>
